fix overflow

--- a/packages/scss/src/components/card/component.scss
+++ b/packages/scss/src/components/card/component.scss
@@ -10,6 +10,10 @@
 	transition-duration: var(--commons-animations-durations-fast);
 	transition-property: background-color, box-shadow, color;
 
+	&:has(.table) {
+		overflow: hidden;
+	}
+
 	@at-root ($atRoot) {
 		.card-content {
 			padding: var(--components-card-content-padding);
